# Skoola

./: .geminiignore  DESIGN_SYSTEM.md  README.md  REOPTIMIZE_UI_PROMPT.md  cargo-config.toml  curriculam and teaacher and student and gurdian connect.md  database-structure.md  justfile  package.json  permission_logic.md  prompt.md  system-structure.md  things.md
backend/: .env.example  .gitignore  Cargo.toml  backend.sqlite  build_and_fetch.sh  cargo_check.txt  cargo_check_output_final.txt  cargo_check_output_final_utf8.txt  cargo_check_output_v4.txt  cargo_check_output_v4_utf8.txt  cargo_check_output_v5.txt  cargo_check_output_v5_utf8.txt  cargo_check_output_v6.txt  cargo_check_output_v6_utf8.txt  cargo_check_output_v7.txt  cargo_check_output_v7_utf8.txt  cargo_output.txt  check_output.txt  database.md  errors.txt  prompt.md  warnings.txt
backend/migrations/2026-02-01-154703-0000_create_users_and_sessions_tables/: down.sql  up.sql
backend/migrations/2026-02-02-062126-0000_add_verification_sent_at_to_users/: down.sql  up.sql
backend/migrations/2026-02-02-185223-0000_add_password_reset_to_users/: down.sql  up.sql
backend/migrations/2026-02-02-185531-0000_add_lockout_to_users/: down.sql  up.sql
backend/migrations/2026-02-02-185704-0000_create_rbac_tables/: down.sql  up.sql
backend/migrations/2026-02-02-192641-0000_create_staff_table/: up.sql
backend/migrations/2026-02-02-192844-0000_create_staff_qualifications_table/: down.sql  up.sql
backend/migrations/2026-02-02-192944-0000_create_staff_employment_history_table/: down.sql  up.sql
backend/migrations/2026-02-02-193108-0000_create_staff_departments_table/: down.sql  up.sql
backend/migrations/2026-02-02-193210-0000_create_staff_roles_table/: down.sql  up.sql
backend/migrations/2026-02-02-193252-0000_create_staff_subjects_table/: down.sql  up.sql
backend/migrations/2026-02-02-194246-0000_create_teacher_class_assignments_table/: down.sql  up.sql
backend/migrations/2026-02-02-194430-0000_create_teacher_subject_assignments_table/: down.sql  up.sql
backend/migrations/2026-02-02-195000-0000_create_staff_attendance_table/: down.sql  up.sql
backend/scripts/: check_admin_crud_coverage.ps1
backend/src/: faker.rs  lib.rs  main.rs  schema.rs  schema.sql  schema_temp.rs
backend/src/config/: mod.rs
backend/src/errors/: iam.rs  (+1 more)
(+1360 files in other folders)
