[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-files = "0.6.5"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
dotenvy = "0.15.7"
derive_more = "2.1.1"
surrealdb = "2.6.0"
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"
chrono = "0.4.43"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["form", "json"] }
futures-util = "0.3.31"
anyhow = "1.0.100"
base64-url = "3.0.2"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono"] }
apistos = { version = "0.6.0", features = ["multipart","scalar"] }
apistos-models = "0.6.0"
apistos-scalar = "0.6.0"
uuid = "1.20.0"
