[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 1  # Line tables only, not full symbols

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-files = "0.6.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
dotenvy = "0.15.7"
derive_more = "0.99.20"

bcrypt = "0.18.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["form", "json"] }
futures-util = "0.3.31"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
base64-url = "3.0.2"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono"] }
apistos = { version = "0.6.0", features = ["multipart","scalar"] }
apistos-models = "0.6.0"
apistos-scalar = "0.6.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = "1.0"
r2d2 = "0.8"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.29.0", features = ["bundled"] }
lettre = "0.11.19"
regex = "1.10.3"
validator = { version = "0.18.1", features = ["derive"] }
sanitize-filename = "0.6.0"
anyhow = "1.0"
